一旦ビルド通るようになった

--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -2,16 +2,18 @@
   "name": "@wsh-2024/client",
   "private": true,
   "scripts": {
-    "build": "pnpm run build:clean && pnpm run build:tsup && pnpm run build:copy",
+    "build": "pnpm run build:clean && pnpm run build:vite && pnpm run build:tsup && pnpm run build:copy",
     "build:clean": "rm -rf ./dist",
     "build:copy": "cp -r ./assets ./dist/assets",
-    "build:tsup": "tsup"
+    "build:tsup": "tsup",
+    "build:vite": "tsc && vite build"
   },
   "dependencies": {
     "@jsquash/jxl": "1.1.0",
     "@webcomponents/webcomponentsjs": "2.8.0",
     "@wsh-2024/admin": "workspace:*",
     "@wsh-2024/app": "workspace:*",
+    "buffer": "6.0.3",
     "core-js": "3.36.0",
     "es5-shim": "4.6.7",
     "es6-shim": "0.35.8",
@@ -29,6 +31,8 @@
     "unorm": "1.6.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "0.2.2",
     "@node-kit/pnpm-workspace-root": "3.2.0",
     "@types/jimp": "0.2.28",
     "@types/jquery": "3.5.29",
@@ -36,8 +40,13 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "@types/serviceworker": "0.0.83",
+    "@vitejs/plugin-react": "4.2.1",
     "esbuild-plugin-polyfill-node": "0.3.0",
     "pkg-dir": "5.0.0",
-    "tsup": "8.0.1"
+    "rollup-plugin-node-polyfills": "0.2.1",
+    "rollup-plugin-polyfill-node": "0.13.0",
+    "tsup": "8.0.1",
+    "vite": "5.2.4",
+    "vite-plugin-node-polyfills": "0.21.0"
   }
 }
