--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -34,6 +34,7 @@
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "0.2.2",
     "@node-kit/pnpm-workspace-root": "3.2.0",
+    "@rollup/plugin-inject": "5.0.5",
     "@types/jimp": "0.2.28",
     "@types/jquery": "3.5.29",
     "@types/path-browserify": "1.0.2",
