--- a/workspaces/client/package.json
+++ b/workspaces/client/package.json
@@ -46,6 +46,7 @@
     "pkg-dir": "5.0.0",
     "rollup-plugin-node-polyfills": "0.2.1",
     "rollup-plugin-polyfill-node": "0.13.0",
+    "rollup-plugin-visualizer": "5.12.0",
     "tsup": "8.0.1",
     "vite": "5.2.4",
     "vite-plugin-node-polyfills": "0.21.0"
